              with well-defined behaviour for an out-of-range index.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
        Class Triangulation<4>:
            - New routine intersectionForm().
            - New optimisations that reduce the need for 3-sphere/3-ball
              recognition when modifying a triangulation.
        Class Vector:
            - Routine scaleDown() now returns the gcd that was used.
        Class Vertex<3>:
            - New routine linkingSurface().
        Routine for_constexpr():
            - New routine to support compile-time for loops.
    PYTHON:
        - For classes that have a bool() cast operator, this is now wrapped in
          Python using the special __bool__() function (i.e., Python will now
          cast such objects to bool in the same way).
    UTILITIES:
        tricensus:
            - Now supports multithreading via the new --threads option.
            - Now supports enumerating subcomplexes of triangulations
              via the new option --allowinvalid.
            - The --genpairs option is now much less memory-hungry when the
              automorphism group is large (e.g., with many boundary facets).

Version 7.0  [ 19 December, 2021 ]

    GENERAL:
        - The file format has changed.  It is still XML-based, but older
          versions of Regina will not be able to read files created by
          Regina 7.0 or later.  Regina can of course still both read
          the old format (transparently) and write it (if asked).
        - The packet tree is now used purely for the GUI and for file I/O.
          Mathematical objects such as triangulations, links, surface lists,
          etc. are standalone, without the overhead of the full packet tree