@@ -42,6 +42,7 @@
 #include "snappea/snappeatriangulation.h"
 #include "surface/normalsurface.h"
 #include "triangulation/example3.h"
+#include "triangulation/facetpairing3.h"
 #include "triangulation/isosigtype.h"
 #include "triangulation/detail/isosig-impl.h"
 #include "../generic/facehelper.h"
@@ -195,6 +196,7 @@ void addTriangulation3(pybind11::module_& m) {
         .def("triangle", (regina::Face<3, 2>* (Triangulation<3>::*)(size_t))(
             &Triangulation<3>::triangle),
             pybind11::return_value_policy::reference_internal)
+        .def("pairing", &Triangulation<3>::pairing)
         .def("isIsomorphicTo", &Triangulation<3>::isIsomorphicTo)
         .def("findAllIsomorphisms", &Triangulation<3>::findAllIsomorphisms<
                 const std::function<bool(const Isomorphism<3>)>&>)
